--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "allt",
     "description": "cli to change letters to alt-letters",
-    "main": "index.js",
+    "main": "allt.js",
+    "bin": "allt.js",
     "repository": {
         "type": "git",
         "url": "https://github.com/stripedpajamas/allt.git"
