--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "allt",
     "description": "cli to change letters to alt-letters",
-    "main": "allt.js",
-    "bin": "allt.js",
+    "preferGlobal": true,
+    "bin": "allt",
     "repository": {
         "type": "git",
         "url": "https://github.com/stripedpajamas/allt.git"
